Update and rename Ashok Urlana.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta name="description" content="Ashok Urlana">
     <!-- <link rel="stylesheet" href="./res/jemdoc.css" type="text/css"> -->
-    <title>Zheng Zhao</title>
+    <title>Ashok Urlana</title>
     <link rel="icon" href="profile.jpg">
 
 <script async="" src="js"></script><script>
