--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <td>
                         <h1 style="display:inline">Ashok Urlana</h1> 
                         <!-- <h4 style="display:inline">赵铮</h4> -->
-                        <p style="width:720px">I am a Masters student in NLP at International Insitute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a> target="_blank">Bonnie Webber</a>.
+                        <p style="width:720px">I am a Masters student in NLP at International Insitute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>.
         
                         <p style="width:720px">My research topic is on <b>text summarization for Indian languages</b>. I am also interested in <b>question answering</b> and their related topics. 
                         </p>
@@ -50,12 +50,12 @@
                     <td>Masters by Research student</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>IIIT-Hyderabad</td>
                     <td>2019 - 2020 &nbsp;</td>
                     <td>Research Intern at IIIT-Hyderabad</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>RGUKT-Nuzvid</td>
                     <td>2014 - 2019 &nbsp;</td>
                     <td>Bachelors Degree</td>
                 </tr>
