--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <tr>
                     <td>IIIT-Hyderabad</td>
                     <td>2019 - 2020 &nbsp;</td>
-                    <td>Research Intern at IIIT-Hyderabad</td>
+                    <td>Research Intern</td>
                 </tr>
                 <tr>
                     <td>RGUKT-Nuzvid</td>
@@ -81,7 +81,7 @@
             <li>
                 <b>Indian Language Summarization using Pretrained Sequence-to-Sequence Models</b><br>
                 Ashok Urlana, Sahil Manoj Bhatt, Nirmal Surange, Manish Shrivastava <br>
-                <i>FIRE</i>, 2022 <br>
+                <i>ILSUM</i>, FIRE2022 <br>
                 [<a href="https://arxiv.org/pdf/2303.14461.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/Indian-Language-Summarization" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
@@ -90,8 +90,25 @@
             <li>
                 <b>Ltrc@ mup 2022: Multi-perspective scientific document summarization using pre-trained generation models</b><br>
                 Ashok Urlana, Nirmal Surange, Manish Shrivastava <br>
-                <i>SDP Workshop</i>, 2022 <br>
+                <i>SDP Workshop</i>, COLING2022 <br>
                 [<a href="https://aclanthology.org/2022.sdp-1.35.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/LTRC-MuP-COLING-2022" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
+
+            
+            <li>
+                <b>TeSum: Human-Generated Abstractive Summarization Corpus for Telugu</b><br>
+                Ashok Urlana*, Nirmal Surange*, Pavan Baswani, Priyanka Ravva, Manish Shrivastava <br>
+                <i>LREC</i>, 2022 <br>
+                [<a href="https://aclanthology.org/2022.lrec-1.614.pdf" target="_blank">PDF</a>] [<a href="https://ltrc.iiit.ac.in/showfile.php?filename=downloads/teSum/" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
+
+            <li>
+                <b></b>AVADHAN: System for Open-Domain Telugu Question Answering<br>
+                Priyanka Ravva, Ashok Urlana Manish Shrivastava <br>
+                <i>CODS-COMAD</i>, 2021 <br>
+                [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
             
