--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <td>
                         <h1 style="display:inline">Ashok Urlana</h1> 
                         <!-- <h4 style="display:inline">赵铮</h4> -->
-                        <p style="width:720px">I am a Masters student in NLP at International Insitute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a "https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravathi Jada</a>
+                        <p style="width:720px">I am a Masters student in NLP at International Insitute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravathi Jada</a>
         
                         <p style="width:720px">My research topic is on <b>text summarization for Indian languages</b>. I am also interested in <b>bio-inspired algorithms </b> and their related topics. 
                         </p>
@@ -71,7 +71,7 @@
         <ul>
             <li>
                 <b>PMIndiaSum: Multilingual and Cross-lingual Headline Summarization for Languages in India</b><br>
-                Ashok Urlana*, Pinzhen Chen*, <u>Zheng Zhao</u>, Shay Cohen, Manish Shrivastava, and Barry Haddow<br>
+                Ashok Urlana*, Pinzhen Chen*, Zheng Zhao, Shay Cohen, Manish Shrivastava, and Barry Haddow<br>
                 <i>arXiv</i>, 2023 <br>
                 [<a href="https://arxiv.org/pdf/2305.08828.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/PMIndiaSum" target="_blank">Code/Data</a>]<br>
                 <br>
@@ -105,10 +105,18 @@
             </li>
 
             <li>
-                <b></b>AVADHAN: System for Open-Domain Telugu Question Answering<br>
-                Priyanka Ravva, Ashok Urlana Manish Shrivastava <br>
+                <b></b>AVADHAN: System for Open-Domain Telugu Question Answering</b><br>
+                Priyanka Ravva, <u>Ashok Urlana<\u>, Manish Shrivastava <br>
                 <i>CODS-COMAD</i>, 2021 <br>
                 [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
+
+            <li>
+                <b></b>Bflier's: A Novel Butterfly Inspired Multi-robotic Model in Search of Signal Sources</b><br>
+                Chakravarthi Jada , Vinod Babu P , Pavan Baswani , <u>Ashok Urlana<\u> , Marek Kolencik , Martin Sebesta, Ramakanth Illa <br> 
+                <i>arXiv</i>, 2022 <br>
+                [<a href="https://arxiv.org/abs/2209.07582" target="_blank">PDF</a>] <br>
                 <br>
             </li>
             
