--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 <b>Bflier's: A Novel Butterfly Inspired Multi-robotic Model in Search of Signal Sources</b><br>
                 Chakravarthi Jada , Vinod Babu P , Pavan Baswani , <u>Ashok Urlana</u> , Marek Kolencik , Martin Sebesta, Ramakanth Illa <br> 
                 <i>RIACT</i>, 2021 <br>
+                <text> style="color:red">Honourable Mention for the Outstanding Oral Presentaion Award</text>
                 [<a href="https://arxiv.org/abs/2209.07582" target="_blank">PDF</a>] <br>
                 <br>
             </li>
