--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <td>
                         <h1 style="display:inline">Ashok Urlana</h1> 
                         <!-- <h4 style="display:inline">赵铮</h4> -->
-                        <p style="width:720px">I am a Masters student in NLP at International Insitute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravathi Jada</a>
+                        <p style="width:720px">I am a Masters student in NLP at International Institute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravarthi Jada</a>
         
                         <p style="width:720px">My research topic is on <b>text summarization for Indian languages</b>. I am also interested in <b>bio-inspired algorithms </b> and their related topics. 
                         </p>
