--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
                         <p style="width:720px">My research topic is on <b>text summarization for Indian languages</b>. I am also interested in <b>bio-inspired algorithms </b> and their related topics. 
                         </p>
-                        <p>[<a href="https://scholar.google.com/citations?user=v5wiUEsAAAAJ&hl=en" target="_blank">Google Scholar</a>] [<a href="https://www.linkedin.com/in/ashokurlana/" target="_blank">Linkedin</a>] [<a href="https://github.com/ashokurlana" target="_blank">GitHub</a>] [E-mail: ashok.urlana@research.iiit.ac.in]</p>
+                        <p>[<a href="https://scholar.google.com/citations?user=v5wiUEsAAAAJ&hl=en" target="_blank">Google Scholar</a>] [<a href="https://www.semanticscholar.org/author/Ashok-Urlana/73575146" target="_blank">Semantic Scholar</a>] [<a href="https://www.linkedin.com/in/ashokurlana/" target="_blank">Linkedin</a>] [<a href="https://github.com/ashokurlana" target="_blank">GitHub</a>] [E-mail: ashok.urlana@research.iiit.ac.in]</p>
                     </td>
                 </tr>
             </tbody>
