--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <b>TeSum: Human-Generated Abstractive Summarization Corpus for Telugu</b><br>
                 <u>Ashok Urlana*</u>, Nirmal Surange*, Pavan Baswani, Priyanka Ravva, Manish Shrivastava <br>
                 <i>Language Resources and Evaluation Conference (LREC) </i>, 2022 <br>
-                [<a href="https://aclanthology.org/2022.lrec-1.614.pdf" target="_blank">PDF</a>] [<a href="https://ltrc.iiit.ac.in/showfile.php?filename=downloads/teSum/" target="_blank">Code/Data</a>]<br>
+                [<a href="https://aclanthology.org/2022.lrec-1.614.pdf" target="_blank">PDF</a>] [<a href="https://ltrc.iiit.ac.in/showfile.php?filename=downloads/teSum/" target="_blank">Data</a>][<a href="https://github.com/ashokurlana/TeSum" target="_blank">Code</a>]<br>
                 <br>
             </li>
 
