--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <!-- <h4 style="display:inline">赵铮</h4> -->
                         <p style="width:720px">I am a Masters student in NLP at International Institute of Information Technology-Hyderabad, working with <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravarthi Jada</a>
         
-                        <p style="width:720px">My research topic is on <b>text summarization for Indian languages</b>. I am also interested in <b>bio-inspired algorithms </b> and their related topics. 
+                        <p style="width:720px">My research topic is on <b>text summarization for Indian languages</b>. I am also interested in <b>bio-inspired algorithms </b> and its related topics. 
                         </p>
                         <p>[<a href="https://scholar.google.com/citations?user=v5wiUEsAAAAJ&hl=en" target="_blank">Google Scholar</a>] [<a href="https://www.semanticscholar.org/author/Ashok-Urlana/73575146" target="_blank">Semantic Scholar</a>] [<a href="https://www.linkedin.com/in/ashokurlana/" target="_blank">Linkedin</a>] [<a href="https://github.com/ashokurlana" target="_blank">GitHub</a>] [E-mail: ashok.urlana@research.iiit.ac.in]</p>
                     </td>
