--- a/index.html
+++ b/index.html
@@ -46,17 +46,22 @@
             <tbody>
                 <tr>
                     <td>IIIT-Hyderabad &nbsp;</td>
-                    <td>2020 - present &nbsp;</td>
+                    <td>August 2023 - present &nbsp;</td>
+                    <td>TCS Research</td>
+                </tr>
+                <tr>
+                    <td>IIIT-Hyderabad &nbsp;</td>
+                    <td>July 2020 - July 2023 &nbsp;</td>
                     <td>Masters by Research student</td>
                 </tr>
                 <tr>
                     <td>IIIT-Hyderabad</td>
-                    <td>2019 - 2020 &nbsp;</td>
+                    <td>May 2019 - June 2020 &nbsp;</td>
                     <td>Research Intern</td>
                 </tr>
                 <tr>
                     <td>RGUKT-Nuzvid</td>
-                    <td>2014 - 2019 &nbsp;</td>
+                    <td>June 2014 - May 2018 &nbsp;</td>
                     <td>Bachelors Degree</td>
                 </tr>
                 <tr>
