--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <tr>
                     <td>IIIT-Hyderabad &nbsp;</td>
                     <td>July 2020 - July 2023 &nbsp;</td>
-                    <td>Masters by Research student</td>
+                    <td>Masters by Research</td>
                 </tr>
                 <tr>
                     <td>IIIT-Hyderabad</td>
