--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li>
                 <b>PMIndiaSum: Multilingual and Cross-lingual Headline Summarization for Languages in India</b><br>
                 <u>Ashok Urlana*</u>, Pinzhen Chen*, Zheng Zhao, Shay Cohen, Manish Shrivastava, and Barry Haddow<br>
-                <i>arXiv</i>, 2023 <br>
+                <i>In Findings of Empirical Methods in Natural Language Processing</i>, EMNLP 2023 <br>
                 [<a href="https://arxiv.org/pdf/2305.08828.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/PMIndiaSum" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
