--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <b>Indian Language Summarization using Pretrained Sequence-to-Sequence Models</b><br>
                 <u>Ashok Urlana</u>, Sahil Manoj Bhatt, Nirmal Surange, Manish Shrivastava <br>
                 <i>Indian Language Summarization (ILSUM) track </i>, Forum for Information Retrieval 2022 <br>
-                [<a href="https://arxiv.org/pdf/2303.14461.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/Indian-Language-Summarization" target="_blank">Code/Data</a>]<br>
+                [<a href="https://arxiv.org/pdf/2303.14461.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/Indian-Language-Summarization" target="_blank">Code/Data</a>] [<a href="slides/ilsum_slides.pdf" target="_blank">Slides</a>]<br>
                 <br>
             </li>
 
@@ -137,7 +137,7 @@
                 <b>Ltrc@ mup 2022: Multi-perspective scientific document summarization using pre-trained generation models</b><br>
                 <u>Ashok Urlana</u>, Nirmal Surange, Manish Shrivastava <br>
                 <i>Scholary Document Processing (SDP) Workshop</i>, 2022 <br>
-                [<a href="https://aclanthology.org/2022.sdp-1.35.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/LTRC-MuP-COLING-2022" target="_blank">Code/Data</a>]<br>
+                [<a href="https://aclanthology.org/2022.sdp-1.35.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/LTRC-MuP-COLING-2022" target="_blank">Code/Data</a>] [<a href="posters/MuP_LTRC_Poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
 
@@ -146,7 +146,7 @@
                 <b>TeSum: Human-Generated Abstractive Summarization Corpus for Telugu</b><br>
                 <u>Ashok Urlana*</u>, Nirmal Surange*, Pavan Baswani, Priyanka Ravva, Manish Shrivastava <br>
                 <i>Language Resources and Evaluation Conference (LREC) </i>, 2022 <br>
-                [<a href="https://aclanthology.org/2022.lrec-1.614.pdf" target="_blank">PDF</a>] [<a href="https://ltrc.iiit.ac.in/showfile.php?filename=downloads/teSum/" target="_blank">Data</a>][<a href="https://github.com/ashokurlana/TeSum" target="_blank">Code</a>]<br>
+                [<a href="https://aclanthology.org/2022.lrec-1.614.pdf" target="_blank">PDF</a>] [<a href="https://ltrc.iiit.ac.in/showfile.php?filename=downloads/teSum/" target="_blank">Data</a>][<a href="https://github.com/ashokurlana/TeSum" target="_blank">Code</a>][<a href="slides/TeSum_slides.pdf" target="_blank">Slides</a>] [<a href="posters/TeSum_poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
 
