--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <b>PMIndiaSum: Multilingual and Cross-lingual Headline Summarization for Languages in India</b><br>
                 <u>Ashok Urlana*</u>, Pinzhen Chen*, Zheng Zhao, Shay Cohen, Manish Shrivastava, and Barry Haddow<br>
                 <i>In Findings of Empirical Methods in Natural Language Processing</i>, EMNLP 2023 <br>
-                [<a href="https://arxiv.org/pdf/2305.08828.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/PMIndiaSum" target="_blank">Code/Data</a>][<a href="posters/PMIndiaSum_Poster.pdf" target="_blank">Poster</a>]<br>
+                [<a href="https://arxiv.org/pdf/2305.08828.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/PMIndiaSum" target="_blank">Code</a>][<a href="https://huggingface.co/datasets/PMIndiaData/PMIndiaSum" target="_blank">Data</a>][<a href="posters/PMIndiaSum_Poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
 
@@ -154,7 +154,7 @@
                 <b>AVADHAN: System for Open-Domain Telugu Question Answering</b><br>
                 Priyanka Ravva, <u>Ashok Urlana</u>, Manish Shrivastava <br>
                 <i>Conference on Data Science and Managament of Data (CODS-COMAD) </i>, 2021 <br>
-                [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>]<br>
+                [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>][<a href="slides/AVADHAN_slides.pdf" target="_blank">Slides</a>][<a href="slides/AVADHAN_poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
 
