--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <b>AVADHAN: System for Open-Domain Telugu Question Answering</b><br>
                 Priyanka Ravva, <u>Ashok Urlana</u>, Manish Shrivastava <br>
                 <i>Conference on Data Science and Managament of Data (CODS-COMAD) </i>, 2021 <br>
-                [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>][<a href="slides/AVADHAN_slides.pdf" target="_blank">Slides</a>][<a href="slides/AVADHAN_poster.pdf" target="_blank">Poster</a>]<br>
+                [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>][<a href="slides/AVADHAN_slides.pdf" target="_blank">Slides</a>][<a href="posters/AVADHAN_poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
 
