--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
         <ul>
      
             <li>
+                <b>Automatic Data Retrieval for Cross Lingual Summarization</b><br>
+                Nikhilesh Bhatnagar*, <u>Ashok Urlana*</u>, Vandan Mujadia, Pruthwik Mishra, Dipti Misra Sharma <br>
+                <i>In proceedings of International Conference on Natural Language Processing </i>, ICON 2023 <br>
+                [<a href="papers/ICON_2023.pdf" target="_blank">PDF</a>] [<a href="https://github.com/tingc9/Cross-Sum-News-Aligned" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
+            
+            <li>
                 <b>PMIndiaSum: Multilingual and Cross-lingual Headline Summarization for Languages in India</b><br>
                 <u>Ashok Urlana*</u>, Pinzhen Chen*, Zheng Zhao, Shay Cohen, Manish Shrivastava, and Barry Haddow<br>
                 <i>In Findings of Empirical Methods in Natural Language Processing</i>, EMNLP 2023 <br>
@@ -136,7 +144,7 @@
             <li>
                 <b>Ltrc@ mup 2022: Multi-perspective scientific document summarization using pre-trained generation models</b><br>
                 <u>Ashok Urlana</u>, Nirmal Surange, Manish Shrivastava <br>
-                <i>Scholary Document Processing (SDP) Workshop</i>, 2022 <br>
+                <i>Scholary Document Processing (SDP) Workshop</i>, COLING 2022 <br>
                 [<a href="https://aclanthology.org/2022.sdp-1.35.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/LTRC-MuP-COLING-2022" target="_blank">Code/Data</a>] [<a href="posters/MuP_LTRC_Poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
@@ -145,7 +153,7 @@
             <li>
                 <b>TeSum: Human-Generated Abstractive Summarization Corpus for Telugu</b><br>
                 <u>Ashok Urlana*</u>, Nirmal Surange*, Pavan Baswani, Priyanka Ravva, Manish Shrivastava <br>
-                <i>Language Resources and Evaluation Conference (LREC) </i>, 2022 <br>
+                <i>Language Resources and Evaluation Conference </i>, LREC 2022 <br>
                 [<a href="https://aclanthology.org/2022.lrec-1.614.pdf" target="_blank">PDF</a>] [<a href="https://ltrc.iiit.ac.in/showfile.php?filename=downloads/teSum/" target="_blank">Data</a>][<a href="https://github.com/ashokurlana/TeSum" target="_blank">Code</a>][<a href="slides/TeSum_slides.pdf" target="_blank">Slides</a>] [<a href="posters/TeSum_poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
@@ -153,7 +161,7 @@
             <li>
                 <b>AVADHAN: System for Open-Domain Telugu Question Answering</b><br>
                 Priyanka Ravva, <u>Ashok Urlana</u>, Manish Shrivastava <br>
-                <i>Conference on Data Science and Managament of Data (CODS-COMAD) </i>, 2021 <br>
+                <i>Conference on Data Science and Management of Data </i>,CODS-COMAD 2021 <br>
                 [<a href="https://dl.acm.org/doi/pdf/10.1145/3371158.3371193" target="_blank">PDF</a>] [<a href="https://github.com/priyanka-ravva/Telugu-Question-Answering" target="_blank">Code/Data</a>][<a href="slides/AVADHAN_slides.pdf" target="_blank">Slides</a>][<a href="posters/AVADHAN_poster.pdf" target="_blank">Poster</a>]<br>
                 <br>
             </li>
