--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <li> Reviewer:
                     <ul>
                         <li> Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023 </li>
+                        <li> International Conference on Natural Language Processing (ICON), 2023 </li>
                     </ul>
                 </li>
             </ul>
@@ -103,7 +104,7 @@
                 <br>
             </li>
             <li>
-                <b>Assessing Translation capabilities of Large Language Models involving English and Indian Languages</b><br>
+                <b>Assessing Translation Capabilities of Large Language Models involving English and Indian Languages</b><br>
                 Vandan Mujadia, <u>Ashok Urlana</u>,  Yash Bhaskar, Penumalla Aditya Pavani, Kukkapalli Shravya, Parameswari Krishnamurthy, Dipti Misra Sharma <br>
                 <i>In arXiv </i>, preprint 2023 <br>
                 [<a href="https://arxiv.org/pdf/2311.09216.pdf" target="_blank">PDF</a>] <br>
@@ -119,7 +120,7 @@
                 <b>Automatic Data Retrieval for Cross Lingual Summarization</b><br>
                 Nikhilesh Bhatnagar*, <u>Ashok Urlana*</u>, Vandan Mujadia, Pruthwik Mishra, Dipti Misra Sharma <br>
                 <i>In proceedings of International Conference on Natural Language Processing </i>, ICON 2023 <br>
-                [<a href="papers/ICON_2023.pdf" target="_blank">PDF</a>] [<a href="https://github.com/tingc9/Cross-Sum-News-Aligned" target="_blank">Code/Data</a>]<br>
+                [<a href="https://arxiv.org/pdf/2312.14542.pdf" target="_blank">PDF</a>] [<a href="https://github.com/tingc9/Cross-Sum-News-Aligned" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
             
