--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <!-- <h4 style="display:inline">赵铮</h4> -->
                         <p style="width:720px">Currently, I am working as a Researcher at TCS research. Earlier, I did my Masters in NLP at International Institute of Information Technology-Hyderabad, under the supervision of <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravarthi Jada</a>
         
-                        <p style="width:720px">My research topic is on the <b> explainability and interpretability </b>of deep learning models. I am also interested in <b>multimodal, multilingual text summarization for low-resource languages </b> and <b>bio-inspired algorithms </b> and its related topics. 
+                        <p style="width:720px">My research interests are<b> explainability and interpretability </b>of deep learning models. I am also interested in <b>multimodal, multilingual text summarization for low-resource languages </b> and <b>bio-inspired algorithms </b> and its related topics. 
                         </p>
                         <p>[<a href="https://scholar.google.com/citations?user=v5wiUEsAAAAJ&hl=en" target="_blank">Google Scholar</a>] [<a href="https://www.semanticscholar.org/author/Ashok-Urlana/73575146" target="_blank">Semantic Scholar</a>] [<a href="https://www.linkedin.com/in/ashokurlana/" target="_blank">Linkedin</a>] [<a href="https://github.com/ashokurlana" target="_blank">GitHub</a>] [E-mail: ashokurlana@gmail.com]</p>
                     </td>
@@ -75,10 +75,10 @@
             <ul>
                 <li> Reviewer:
                     <ul>
+                        <li> EACL Student Research Workshop, 2024 </li>
+                        <li> EACL DravidianLangTech Workshop, 2024 </li>
                         <li> Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023 </li>
                         <li> International Conference on Natural Language Processing (ICON), 2023 </li>
-                        <li> EACL Student Research Workshop, 2024 </li>
-                        <li> EACL DravidianLangTech Workshop, 2023 </li>
                     </ul>
                 </li>
             </ul>
