--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <ul>
             <li>
                 <b>LimGen: Probing the LLMs for Generating Suggestive Limitations of Research Papers </b><br>
-                <u>Abdur Rahman Bin Md Faizullah, Ashok Urlana, Rahul Mishra <br>
+                <u>Abdur Rahman Bin Md Faizullah*, <u>Ashok Urlana*</u>, Rahul Mishra <br>
                 <i>In arXiv </i>, preprint 2024 <br>
                 [<a href="https://arxiv.org/pdf/2403.15529.pdf" target="_blank">PDF</a>] [<a href="https://github.com/arbmf/LimGen" target="_blank">Code/Data</a>] <br>
                 <br>
@@ -132,7 +132,14 @@
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
-     
+            <li>
+                <b>TrustAI at SemEval-2024 Task 8: A Comprehensive Analysis of Multi-domain Machine Generated Text Detection Techniques </b><br>
+                <u>Ashok Urlana</u>, Aditya Saibewar, Bala Mallikarjunarao Garlapati, Charaka Vinayak Kumar, Ajeet Kumar Singh, Srinivasa Rao Chalamala <br>
+                <i>In arXiv </i>, preprint 2024 <br>
+                [<a href="https://arxiv.org/pdf/2403.16592.pdf" target="_blank">PDF</a>] <br>
+                <br>
+            </li>
+            
             <li>
                 <b>Automatic Data Retrieval for Cross Lingual Summarization</b><br>
                 Nikhilesh Bhatnagar*, <u>Ashok Urlana*</u>, Vandan Mujadia, Pruthwik Mishra, Dipti Misra Sharma <br>
