--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <li>
                 <b>TrustAI at SemEval-2024 Task 8: A Comprehensive Analysis of Multi-domain Machine Generated Text Detection Techniques </b><br>
                 <u>Ashok Urlana</u>, Aditya Saibewar, Bala Mallikarjunarao Garlapati, Charaka Vinayak Kumar, Ajeet Kumar Singh, Srinivasa Rao Chalamala <br>
-                <i>In arXiv </i>, preprint 2024 <br>
+                <i>In semEval-2024 workshop at NAACL2024 </i>, preprint 2024 <br>
                 [<a href="https://arxiv.org/pdf/2403.16592.pdf" target="_blank">PDF</a>] <br>
                 <br>
             </li>
