--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <b>Exploring News Summarization and Enrichment in a Highly Resource-Scarce Indian Language: A Case Study of Mizo </b><br>
                 Abhinaba Bala, <u>Ashok Urlana</u>, Rahul Mishra, Parameswari Krishnamurthy <br>
                 <i>In WILDRE-7 workshop at LREC-COLING 2024 </i><br>
-                [<a href="papers/Mizo_enrichement.pdf" target="_blank">PDF</a>] <br>
+                [<a href="papers/Mizo_enrichement.pdf" target="_blank">PDF</a>] [<a href="https://github.com/barvin04/mizo_enrichment" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
             <li>
