--- a/index.html
+++ b/index.html
@@ -120,19 +120,18 @@
                 [<a href="https://arxiv.org/pdf/2311.09212.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/controllable_text_summarization_survey" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
-            <li>
-                <b>Assessing Translation Capabilities of Large Language Models involving English and Indian Languages</b><br>
-                Vandan Mujadia, <u>Ashok Urlana</u>,  Yash Bhaskar, Penumalla Aditya Pavani, Kukkapalli Shravya, Parameswari Krishnamurthy, Dipti Misra Sharma <br>
-                <i>In arXiv </i>, preprint 2023 <br>
-                [<a href="https://arxiv.org/pdf/2311.09216.pdf" target="_blank">PDF</a>] <br>
-                <br>
-            </li>
         </ul>
         
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
-            
+            <li>
+                <b>Assessing Translation Capabilities of Large Language Models involving English and Indian Languages</b><br>
+                Vandan Mujadia, <u>Ashok Urlana</u>,  Yash Bhaskar, Penumalla Aditya Pavani, Kukkapalli Shravya, Parameswari Krishnamurthy, Dipti Misra Sharma <br>
+                <i> In Annual Conference of the European Association for Machine Translation (EAMT) 2024 </i><br>
+                [<a href="https://arxiv.org/pdf/2311.09216.pdf" target="_blank">PDF</a>] <br>
+                <br>
+            </li>
             <li>
                 <b>Exploring News Summarization and Enrichment in a Highly Resource-Scarce Indian Language: A Case Study of Mizo </b><br>
                 Abhinaba Bala, <u>Ashok Urlana</u>, Rahul Mishra, Parameswari Krishnamurthy <br>
