--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
         <h2>Services</h2>
             <ul>
-                <li> Reviewer:
+                <li> Program Committee/Reviewer:
                     <ul>
+                        <li> Association for Computational Linguistics Rolling Review (ARR): 2023, 2024 </li>
                         <li> EACL Student Research Workshop, 2024 </li>
                         <li> EACL DravidianLangTech Workshop, 2024 </li>
                         <li> Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023 </li>
@@ -106,7 +107,7 @@
             </li>
             
             <li>
-                <b>LLMs with Industrial Lens: Deciphering the Challenges and Prospects -- A Survey </b><br>
+                <b>LLMs with Industrial Lens: Deciphering the Challenges and Prospects -- A Survey</b><br>
                 <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Ajeet Kumar Singh, Bala Mallikarjunarao Garlapati, Srinivasa Rao Chalamala, Rahul Mishra <br>
                 <i>In arXiv </i>, preprint 2024 <br>
                 [<a href="https://arxiv.org/pdf/2402.14558.pdf" target="_blank">PDF</a>] <br>
