--- a/index.html
+++ b/index.html
@@ -112,20 +112,19 @@
                 <i>In arXiv </i>, preprint 2024 <br>
                 [<a href="https://arxiv.org/pdf/2402.14558.pdf" target="_blank">PDF</a>] <br>
                 <br>
-            </li>
-            
-            <li>
-                <b>Controllable Text Summarization: Unraveling Challenges, Approaches, and Prospects -- A Survey</b><br>
-                <u>Ashok Urlana</u>, Pruthwik Mishra, Tathagato Roy, Rahul Mishra <br>
-                <i>In arXiv </i>, preprint 2023 <br>
-                [<a href="https://arxiv.org/pdf/2311.09212.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/controllable_text_summarization_survey" target="_blank">Code/Data</a>]<br>
-                <br>
-            </li>
+            </li>            
         </ul>
         
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
+            <li>
+                <b>Controllable Text Summarization: Unraveling Challenges, Approaches, and Prospects -- A Survey</b><br>
+                <u>Ashok Urlana</u>, Pruthwik Mishra, Tathagato Roy, Rahul Mishra <br>
+                <i>Findings of </i> ACL2024 <br>
+                [<a href="https://arxiv.org/pdf/2311.09212.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/controllable_text_summarization_survey" target="_blank">Code/Data</a>]<br>
+                <br>
+            </li>
             <li>
                 <b>Assessing Translation Capabilities of Large Language Models involving English and Indian Languages</b><br>
                 Vandan Mujadia, <u>Ashok Urlana</u>,  Yash Bhaskar, Penumalla Aditya Pavani, Kukkapalli Shravya, Parameswari Krishnamurthy, Dipti Misra Sharma <br>
