--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@
         <h4>Preprints</h4>
         <ul>
             <li>
-                <b>LimGen: Probing the LLMs for Generating Suggestive Limitations of Research Papers </b><br>
-                <u>Abdur Rahman Bin Md Faizullah*, <u>Ashok Urlana*</u>, Rahul Mishra <br>
-                <i>In arXiv </i>, preprint 2024 <br>
-                [<a href="https://arxiv.org/pdf/2403.15529.pdf" target="_blank">PDF</a>] [<a href="https://github.com/arbmf/LimGen" target="_blank">Code/Data</a>] <br>
-                <br>
-            </li>
-            
-            <li>
                 <b>LLMs with Industrial Lens: Deciphering the Challenges and Prospects -- A Survey</b><br>
                 <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Ajeet Kumar Singh, Bala Mallikarjunarao Garlapati, Srinivasa Rao Chalamala, Rahul Mishra <br>
                 <i>In arXiv </i>, preprint 2024 <br>
@@ -118,6 +110,13 @@
         <h4>Publications</h4>
         <!-- *indicates equal contribution. -->
         <ul>
+            <li>
+                <b>LimGen: Probing the LLMs for Generating Suggestive Limitations of Research Papers </b><br>
+                <u>Abdur Rahman Bin Md Faizullah*, <u>Ashok Urlana*</u>, Rahul Mishra <br>
+                <i>In proceedings of ECML PKDD </i>, 2024 <br>
+                [<a href="https://arxiv.org/pdf/2403.15529.pdf" target="_blank">PDF</a>] [<a href="https://github.com/arbmf/LimGen" target="_blank">Code/Data</a>] <br>
+                <br>
+            </li>
             <li>
                 <b>Controllable Text Summarization: Unraveling Challenges, Approaches, and Prospects -- A Survey</b><br>
                 <u>Ashok Urlana</u>, Pruthwik Mishra, Tathagato Roy, Rahul Mishra <br>
