--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <li>
                 <b>LimGen: Probing the LLMs for Generating Suggestive Limitations of Research Papers </b><br>
                 <u>Abdur Rahman Bin Md Faizullah*, <u>Ashok Urlana*</u>, Rahul Mishra <br>
-                <i>In proceedings of ECML PKDD </i>, 2024 <br>
+                <i>In proceedings of </i>ECML PKDD 2024 <br>
                 [<a href="https://arxiv.org/pdf/2403.15529.pdf" target="_blank">PDF</a>] [<a href="https://github.com/arbmf/LimGen" target="_blank">Code/Data</a>] <br>
                 <br>
             </li>
