--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <b>TrustAI at SemEval-2024 Task 8: A Comprehensive Analysis of Multi-domain Machine Generated Text Detection Techniques </b><br>
                 <u>Ashok Urlana</u>, Aditya Saibewar, Bala Mallikarjunarao Garlapati, Charaka Vinayak Kumar, Ajeet Kumar Singh, Srinivasa Rao Chalamala <br>
                 <i>In SemEval workshop at NAACL2024 </i><br>
-                [<a href="https://arxiv.org/pdf/2403.16592.pdf" target="_blank">PDF</a>] <br>
+                [<a href="https://aclanthology.org/2024.semeval-1.134.pdf" target="_blank">PDF</a>] <br>
                 <br>
             </li>
             
