--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
         
         <h4>Preprints</h4>
         <ul>
+            
+            <li>
+                <b>No Size Fits All: The Perils and Pitfalls of Leveraging LLMs Vary with Company Size</b><br>
+                <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Ajeet Kumar Singh, Rahul Mishra <br>
+                <i>In arXiv </i>, preprint 2024 <br>
+                [<a href="https://arxiv.org/pdf/2408.01444" target="_blank">PDF</a>] <br>
+                <br>
+            </li>
             <li>
                 <b>LLMs with Industrial Lens: Deciphering the Challenges and Prospects -- A Survey</b><br>
                 <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Ajeet Kumar Singh, Bala Mallikarjunarao Garlapati, Srinivasa Rao Chalamala, Rahul Mishra <br>
