--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <!-- <h4 style="display:inline">赵铮</h4> -->
                         <p style="width:720px">Currently, I am working as a Researcher at TCS research. Earlier, I did my Masters in NLP at International Institute of Information Technology-Hyderabad, under the supervision of <a href="https://www.iiit.ac.in/people/faculty/m.shrivastava/" target="_blank">Manish Shrivastava</a>. Previously I worked with <a href="https://rguktn.ac.in/profile/RN061116004" target="_blank">Chakravarthi Jada</a>
         
-                        <p style="width:720px">My research interests are<b> explainability and interpretability </b>of deep learning models. I am also interested in <b>multimodal, multilingual text summarization for low-resource languages </b> and <b>bio-inspired algorithms </b> and its related topics. 
+                        <p style="width:720px">My research interests are<b> explainability and interpretability </b>of LLMs. I am also interested in <b>multimodal, multilingual text summarization for low-resource languages </b> and <b>bio-inspired algorithms </b> and its related topics. 
                         </p>
                         <p>[<a href="https://scholar.google.com/citations?user=v5wiUEsAAAAJ&hl=en" target="_blank">Google Scholar</a>] [<a href="https://www.semanticscholar.org/author/Ashok-Urlana/73575146" target="_blank">Semantic Scholar</a>] [<a href="https://www.linkedin.com/in/ashokurlana/" target="_blank">Linkedin</a>] [<a href="https://github.com/ashokurlana" target="_blank">GitHub</a>] [E-mail: ashokurlana@gmail.com]</p>
                     </td>
@@ -129,7 +129,7 @@
                 <b>Controllable Text Summarization: Unraveling Challenges, Approaches, and Prospects -- A Survey</b><br>
                 <u>Ashok Urlana</u>, Pruthwik Mishra, Tathagato Roy, Rahul Mishra <br>
                 <i>Findings of </i> ACL2024 <br>
-                [<a href="https://arxiv.org/pdf/2311.09212.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/controllable_text_summarization_survey" target="_blank">Code/Data</a>]<br>
+                [<a href="https://aclanthology.org/2024.findings-acl.93.pdf" target="_blank">PDF</a>] [<a href="https://github.com/ashokurlana/controllable_text_summarization_survey" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
             <li>
@@ -143,7 +143,7 @@
                 <b>Exploring News Summarization and Enrichment in a Highly Resource-Scarce Indian Language: A Case Study of Mizo </b><br>
                 Abhinaba Bala, <u>Ashok Urlana</u>, Rahul Mishra, Parameswari Krishnamurthy <br>
                 <i>In WILDRE-7 workshop at LREC-COLING 2024 </i><br>
-                [<a href="papers/Mizo_enrichement.pdf" target="_blank">PDF</a>] [<a href="https://github.com/barvin04/mizo_enrichment" target="_blank">Code/Data</a>]<br>
+                [<a href="https://aclanthology.org/2024.wildre-1.6.pdf" target="_blank">PDF</a>] [<a href="https://github.com/barvin04/mizo_enrichment" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
             <li>
@@ -158,7 +158,7 @@
                 <b>Automatic Data Retrieval for Cross Lingual Summarization</b><br>
                 Nikhilesh Bhatnagar*, <u>Ashok Urlana*</u>, Vandan Mujadia, Pruthwik Mishra, Dipti Misra Sharma <br>
                 <i>In proceedings of International Conference on Natural Language Processing </i>, ICON 2023 <br>
-                [<a href="https://arxiv.org/pdf/2312.14542.pdf" target="_blank">PDF</a>] [<a href="https://github.com/tingc9/Cross-Sum-News-Aligned" target="_blank">Code/Data</a>]<br>
+                [<a href="https://aclanthology.org/2023.icon-1.85.pdf" target="_blank">PDF</a>] [<a href="https://github.com/tingc9/Cross-Sum-News-Aligned" target="_blank">Code/Data</a>]<br>
                 <br>
             </li>
             
