--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <li>
                 <b>No Size Fits All: The Perils and Pitfalls of Leveraging LLMs Vary with Company Size</b><br>
                 <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Ajeet Kumar Singh, Rahul Mishra <br>
-                <i>In proceedings of </i>, Industry Track COLING 2025 <br>
+                <i>In proceedings of </i>COLING 2025 Industry Track  <br>
                 [<a href="https://arxiv.org/pdf/2408.01444" target="_blank">PDF</a>] <br>
                 <br>
             </li>
