--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <b>No Size Fits All: The Perils and Pitfalls of Leveraging LLMs Vary with Company Size</b><br>
                 <u>Ashok Urlana</u>, Charaka Vinayak Kumar, Bala Mallikarjunarao Garlapati, Ajeet Kumar Singh, Rahul Mishra <br>
                 <i>In proceedings of </i>COLING 2025 Industry Track  <br>
-                [<a href="https://arxiv.org/pdf/2408.01444" target="_blank">PDF</a>] <br>
+                [<a href="https://arxiv.org/pdf/2408.01444" target="_blank">PDF</a>] [<a href="https://github.com/vinayakcse/IndustrialLLMsPapers" target="_blank">Code/Data</a>] <br>
                 <br>
             </li>
             <li>
